--- a/notebooks/timmys_notebook.ipynb
+++ b/notebooks/timmys_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "4             0             0              40            Cuba   <=50K  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,31 +193,210 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "<h3>Step 1 preprocessing</h3>"
+    "filtered_df = df.loc[df[\"Native-country\"] == \" United-States\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Count  Percentage\n",
+      "Income                   \n",
+      "<=50K   21998   75.415681\n",
+      ">50K     7171   24.584319\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter the dataframe to exclude rows where \"Native-country\" is \"United-States\"\n",
+    "# filtered_df = df[df[\"Native-country\"] != \" United-States\"]\n",
+    "\n",
+    "# Count the occurrences of each income value\n",
+    "income_counts = filtered_df[\"Income\"].value_counts()\n",
+    "\n",
+    "# Calculate the percentage for each income value\n",
+    "income_percentages = (income_counts / len(filtered_df)) * 100\n",
+    "\n",
+    "# Combine counts and percentages into a new DataFrame for clarity\n",
+    "income_summary = pd.DataFrame({\n",
+    "    \"Count\": income_counts,\n",
+    "    \"Percentage\": income_percentages\n",
+    "})\n",
+    "\n",
+    "print(income_summary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_df = df.loc[df[\"Native-country\"] != \" United-States\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Count  Percentage\n",
+      "Income                   \n",
+      "<=50K    2721   80.241817\n",
+      ">50K      670   19.758183\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter the dataframe to exclude rows where \"Native-country\" is \"United-States\"\n",
+    "# filtered_df = df[df[\"Native-country\"] != \" United-States\"]\n",
+    "\n",
+    "# Count the occurrences of each income value\n",
+    "income_counts = filtered_df[\"Income\"].value_counts()\n",
+    "\n",
+    "# Calculate the percentage for each income value\n",
+    "income_percentages = (income_counts / len(filtered_df)) * 100\n",
+    "\n",
+    "# Combine counts and percentages into a new DataFrame for clarity\n",
+    "income_summary = pd.DataFrame({\n",
+    "    \"Count\": income_counts,\n",
+    "    \"Percentage\": income_percentages\n",
+    "})\n",
+    "\n",
+    "print(income_summary)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Step 2 similarities</h3>"
+    "Apriori and FP \n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "<h3>Step 3 create graph</h3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3>Step 4 vizualization</h3>"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from mlxtend.preprocessing import TransactionEncoder\n",
+    "from mlxtend.frequent_patterns import apriori, association_rules\n",
+    "from mlxtend.frequent_patterns import fpgrowth\n",
+    "\n",
+    "\n",
+    "def prepare_data(df):\n",
+    "    \"\"\"\n",
+    "    Prepare the dataframe for association rule mining by:\n",
+    "    1. Converting numeric columns to categorical\n",
+    "    2. Creating binary encoded columns\n",
+    "    3. Identifying high income threshold\n",
+    "    \"\"\"\n",
+    "    # Create a copy of the dataframe\n",
+    "    df_processed = df.copy()\n",
+    "\n",
+    "    # Define high income threshold (using the provided data's income column)\n",
+    "    df_processed['high_income'] = (\n",
+    "        df_processed['Income'] == '>50K').astype(int)\n",
+    "\n",
+    "    # Columns to convert to categorical\n",
+    "    categorical_cols = [\n",
+    "        'Workclass', 'Education', 'Marital-status', 'Occupation',\n",
+    "        'Relationship', 'Race', 'Sex', 'Native-country'\n",
+    "    ]\n",
+    "\n",
+    "    # Add binary columns for each categorical variable\n",
+    "    for col in categorical_cols:\n",
+    "        df_processed[col + '_cat'] = df_processed[col]\n",
+    "\n",
+    "    # Categorize numeric columns\n",
+    "    df_processed['Age_cat'] = pd.cut(df_processed['Age'],\n",
+    "                                     bins=[0, 25, 35, 45, 55, 100],\n",
+    "                                     labels=['Young', 'Early-Career', 'Mid-Career', 'Late-Career', 'Senior'])\n",
+    "\n",
+    "    df_processed['Education-num_cat'] = pd.cut(df_processed['Education-num'],\n",
+    "                                               bins=[0, 8, 10, 12, 16, 100],\n",
+    "                                               labels=['Basic', 'Some-HS', 'HS-Grad', 'Bachelors', 'Advanced'])\n",
+    "\n",
+    "    df_processed['Hours-per-week_cat'] = pd.cut(df_processed['Hours-per-week'],\n",
+    "                                                bins=[0, 20, 40, 60, 100],\n",
+    "                                                labels=['Part-time', 'Standard', 'Overtime', 'Extensive'])\n",
+    "\n",
+    "    return df_processed\n",
+    "\n",
+    "\n",
+    "def mine_association_rules(df_processed, algorithm='apriori', min_support=0.1, min_confidence=0.7):\n",
+    "    \"\"\"\n",
+    "    Mine association rules using specified algorithm\n",
+    "\n",
+    "    Parameters:\n",
+    "    - df_processed: Preprocessed dataframe\n",
+    "    - algorithm: 'apriori' or 'fpgrowth'\n",
+    "    - min_support: Minimum support threshold\n",
+    "    - min_confidence: Minimum confidence threshold\n",
+    "\n",
+    "    Returns:\n",
+    "    - DataFrame of association rules\n",
+    "    \"\"\"\n",
+    "    # Select relevant categorical columns\n",
+    "    rule_columns = [\n",
+    "        col for col in df_processed.columns\n",
+    "        if col.endswith('_cat') or col == 'high_income'\n",
+    "    ]\n",
+    "\n",
+    "    # Prepare transactions\n",
+    "    transactions = df_processed[rule_columns].apply(lambda x:\n",
+    "                                                    [str(val) for val in x if pd.notna(val)], axis=1).tolist()\n",
+    "\n",
+    "    # One-hot encode transactions\n",
+    "    te = TransactionEncoder()\n",
+    "    te_ary = te.fit(transactions).transform(transactions)\n",
+    "    te_df = pd.DataFrame(te_ary, columns=te.columns_)\n",
+    "\n",
+    "    # Apply frequent itemset mining\n",
+    "    if algorithm == 'apriori':\n",
+    "        frequent_itemsets = apriori(\n",
+    "            te_df, min_support=min_support, use_colnames=True)\n",
+    "    else:  # fpgrowth\n",
+    "        frequent_itemsets = fpgrowth(\n",
+    "            te_df, min_support=min_support, use_colnames=True)\n",
+    "\n",
+    "    # Generate association rules\n",
+    "    rules = association_rules(\n",
+    "        frequent_itemsets, metric=\"confidence\", min_threshold=min_confidence)\n",
+    "\n",
+    "    # Sort rules by lift\n",
+    "    rules = rules.sort_values('lift', ascending=False)\n",
+    "\n",
+    "    return rules\n",
+    "\n",
+    "\n",
+    "# Prepare the data\n",
+    "df_processed = prepare_data(df)\n",
+    "\n",
+    "# Mine rules using both Apriori and FP-Growth\n",
+    "print(\"Apriori Association Rules:\")\n",
+    "apriori_rules = mine_association_rules(df_processed, algorithm='apriori')\n",
+    "print(apriori_rules)\n",
+    "\n",
+    "print(\"\\nFP-Growth Association Rules:\")\n",
+    "fpgrowth_rules = mine_association_rules(df_processed, algorithm='fpgrowth')\n",
+    "print(fpgrowth_rules)"
    ]
   }
  ],
